# alpina

./: Makefile  README.md  clean.yml  pyproject.toml  renovate.json  services.yml  site.yml
contrib/: compose_helpers.j2  docker_compose_template_task_list.yml  rbw-client.sh
group_vars/: docker_hosts.yml
group_vars/alpina/: vars.yml  vault.yml
inventories/prod/: hosts
inventories/prod/group_vars/: all.yml  docker_hosts.yml
inventories/staging/: hosts
inventories/staging/group_vars/: all.yml  docker_hosts.yml
roles/alpina/tasks/: deploy_collection.yml  deploy_compose_stack.yml  main.yml
roles/arrstack/tasks/: main.yml
roles/arrstack/templates/: docker-compose.yml.j2
roles/arrstack/vars/: main.yml
roles/authentik/templates/: .env.db.j2  .env.j2  docker-compose.yml.j2
roles/authentik/vars/: app_config.yml  main.yml
roles/clean/tasks/: main.yml
roles/common/tasks/: main.yml
roles/docker_host/tasks/: main.yml
roles/docker_host/templates/: daemon.json.j2
roles/gitea/templates/: .env.db.j2  .env.gitea.j2  docker-compose.yml.j2
roles/gitea/vars/: app_config.yml  main.yml
roles/jackett/templates/: docker-compose.yml.j2
roles/jackett/vars/: main.yml
roles/jellyfin/templates/: .env.jellyfin.j2  docker-compose.yml.j2
roles/jellyfin/vars/: app_config.yml  main.yml
roles/nextcloud/tasks/: main.yml
roles/nextcloud/templates/: .env.db.j2  .env.j2  .env.nextcloud.j2  .env.redis.j2  docker-compose.yml.j2  nginx.conf.j2
roles/nextcloud/vars/: main.yml
roles/traefik/tasks/: main.yml
roles/traefik/templates/: .env.traefik.j2  traefik.yml.j2  (+1 more)
(+99 files in other folders)
