[tool.poetry]
name = "alpina"
version = "0.1.0"
description = ""
authors = ["Iurii Tatishchev <itatishch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^12.0.0"
ansible-vault = "^2.1.0"
netaddr = "^1.3.0"

[tool.poetry.group.dev.dependencies]
grafanalib = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
